  (#3142456 Matthieu Casanova)

- The Java based installer now correctly handles GNU style long filenames in
  the installer package and thus does not corrupt the JavaDoc files anymore
  (#2327520 Björn "Vampire" Kautler)

- Several message boxes were not being created on the EDT which would result in
  tiny, non-resizable message boxes. (#3441535 Dale Anson)

}}}
{{{ API Changes

- New public constructor for org.gjt.sp.jedit.gui.ErrorListDialog
  allowing for specifying custom urgency (priority).

- TextArea.isCaretVisible became public (patch #3518424 Makarius)

- Fixed jedit exit procedure. Now all views are closed. Earlier only
  the current view was properly closed. This may be important for plugins
  that were workarounding the issue, as now they will get more
  ViewUpdate.CLOSED messages. (Jarek Czekalski)

- The JEditEmbeddedTextArea and StandaloneTextArea do not create an empty
  popup menu anymore.
  To add a context menu in your JEditEmbeddedTextArea, please override
  createPopupMenu(MouseEvent evt) as before, but also call
  setRightClickPopupEnabled(true) in your constructor (Matthieu Casanova)

- New jEdit.getCurrentLanguage() method that returns the language used  by jEdit
  (Matthieu Casanova)

- New method JEditBuffer.insert(int offset, CharSequence seq) to insert
  text in a buffer. (Matthieu Casanova)

- New constructors for CopyFileWorker:
  CopyFileWorker(Component comp, VFSFile[] vfsFiles, String target)
  CopyFileWorker(Component comp, VFSFile[] vfsFiles, String target,
  			Behavior behavior)
  CopyFileWorker(Component comp, File[] files, String target)
  CopyFileWorker(Component comp, File[] files, String target, Behavior behavior)
  to allow copy of multiple files at the same time (Matthieu Casanova)

- New VFS.copy() methods:
  copy(ProgressObserver progress, VFS sourceVFS, Object sourceSession,
  	String sourcePath, VFS targetVFS, Object targetSession,
  	String targetPath, Component comp, boolean canStop,
  	boolean sendVFSUpdate)